# http-image-processor

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
