[package]
name = "image-processor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
axum = { version = "0.2", features = ["multipart"]}
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
rusttype = "0.9"
imageproc = "0.22"